components/01-atoms/blockquote/blockquote.css
/*** Blockquote Variables ***/
.blockquote {
  --skeleton-color-fg-blockquote: var(--skeleton-color-fg-base);
  --skeleton-color-fg-cite-blockquote: var(--skeleton-color-fg-subdued);
  --skeleton-color-border-blockquote: var(--skeleton-color-border-neutral-extra-subdued);
  
  --skeleton-size-text-cite-blockquote: var(--skeleton-size-text-small);
  --skeleton-size-text-blockquote: var(--skeleton-size-text-normal);
}
/*** Blockquote Styles ***/
.blockquote {
  color: var(--skeleton-color-fg-blockquote);
  padding: 1rem 1rem 1rem 1.5rem;
  font-size: var(--skeleton-size-text-blockquote);
  line-height: 1.6;
  border-inline-start: 2px solid var(--skeleton-color-border-blockquote);
}
/* add margin when in main node content */
.field--body .blockquote {
    margin-block: 2rem;
  }
.blockquote__cite {
    inline-size: 100%;
    display: block;
    font-size: var(--skeleton-size-text-cite-blockquote);
    color: var(--skeleton-color-fg-cite-blockquote);
    text-align: end;
    margin-block-start: 1.5rem;
  }
.blockquote__cite::before {
      content: "— ";
    }
/* if paragraphs are injected */
.blockquote p:last-of-type {
    margin-block-end: 0;
  }

